Kubernetes/Scripts/Ingress/Prod/nginx-config-ingress-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ready.gives
  namespace: default
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - admin"
spec:
  tls:
  - hosts:  
    - ready.gives
    secretName: tls-secret-prod
  - hosts:
    - www.ready.gives
    secretName: tls-secret-prod
  - hosts:
    - donate.ready.gives
    secretName: tls-secret-prod
  - hosts:
    - admin.ready.gives
    secretName: tls-secret-prod
  rules:
  - host: ready.gives
    http:
      paths:
      - path: /
        backend:
          serviceName: lunchbagwebportal
          servicePort: 80
      - path: /api
        backend:
          serviceName: lunchbagwebportalapi
          servicePort: 80
  - host: www.ready.gives
    http:
      paths:
      - path: /
        backend:
          serviceName: lunchbagwebportal
          servicePort: 80
      - path: /api
        backend:
          serviceName: lunchbagwebportalapi
          servicePort: 80
  - host: donate.ready.gives
    http:
      paths:
      - path: /
        backend:
          serviceName: lunchbagregistrationportal
          servicePort: 80
      - path: /api
        backend:
          serviceName: lunchbagregistrationportalapi
          servicePort: 80
  - host: admin.ready.gives
    http:
      paths:
      - path: /
        backend:
          serviceName: lunchbagadminportal
          servicePort: 80
